# puffer-standards

./: .gitignore  CMakeLists.txt  README.md  test.cpp
include/pufd/Allocators/: Allocator.h  BasicAllocator.h
include/pufd/Containers/: Array.h
include/pufd/SmartPointers/: Pointer.h  SharedPointer.h
include/pufd/String/: String.h
include/pufd/Utils/: Cloneable.h  Move.h  NumericalTypes.h  Result.h
source/: Array.cpp  BasicAllocator.cpp  String.cpp
